# TaskFlow

./: .env.example  .gitignore  CLAUDE.md  README.md  README_zh.md  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml
api/: .env.example  pyproject.toml
api/app/: main.py
api/app/core/: config.py
api/app/models/: bookmark.py
api/app/routes/: bookmarks.py  tags.py
api/app/schemas/: bookmark.py
docs/: Style 4_ Sunsama Calm.html
docs/designs/: 1-teal-calm.html  2-warm-amber.html  3-sage-green.html  4-soft-indigo.html  5-rosewood.html  6-dark-teal.html  7-dark-indigo.html
extension/: manifest.json  package-lock.json  package.json  tsconfig.json
extension/src/background/: index.ts
extension/src/popup/: index.html  main.ts  style.css
extension/src/types/: bookmark.ts
extension/src/utils/: api.ts
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: db.ts  index.ts  schema.ts  utils.ts
mcp-server/src/tools/: ai-powered.ts  challenge.ts  convenience.ts  read.ts  write.ts
scripts/: import-challenge.ts
src/: middleware.ts
src/actions/: daily-review-actions.ts  data-actions.ts  label-actions.ts  project-actions.ts  search-actions.ts  task-actions.ts
src/actions/__tests__/: import-schema.test.ts  register.test.ts
src/app/: global-error.tsx  globals.css  layout.tsx
src/app/(app)/: error.tsx  layout.tsx  not-found.tsx
src/db/: index.ts  queries.ts  schema.ts  seed.ts
src/lib/: auth-utils.ts  auth.ts  constants.ts  date-utils.ts  quotes.ts  validators.ts
(+49 files in other folders)
