[project]
name = "bookmark-api"
version = "0.1.0"
description = "Smart Bookmark Manager API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "readability-lxml>=0.8.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "google-genai>=1.0.0",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
